--- a/src/components/sidebar-profile/sidebar-profile.module.css
+++ b/src/components/sidebar-profile/sidebar-profile.module.css
@@ -12,7 +12,7 @@
   transition-duration: 400ms;
   transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
-  &.large {
+  &.breakpoint-large {
     position: sticky;
     top: 0;
     left: 0;
