--- a/src/components/projects/projects.module.css
+++ b/src/components/projects/projects.module.css
@@ -8,7 +8,7 @@
 
 .project-item {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
 
   &.breakpoint-medium {
     flex-direction: row;
@@ -21,7 +21,7 @@
   &.breakpoint-medium {
     flex: 1 0 0;
     margin-top: 0;
-    margin-right: var(--spacing-7);
+    margin-left: var(--spacing-3);
   }
 }
 
