--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,6 +1,6 @@
 .main {
   display: flex;
-  max-width: 1500px;
+  max-width: 1502px;
   margin: 0 auto;
   background: var(--background);
 }
@@ -10,4 +10,5 @@
   flex-direction: column;
   width: 100%;
   margin: 0 auto;
+  padding-bottom: var(--spacing-10);
 }
