add thme mode button and colors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,6 +41,22 @@
   --yellow: #f1fa8c;
 }
 
+.light-mode {
+  --background: #ECEEF5;
+  --background-dark: #CDD1DD;
+  --current-line: #A7AAB6;
+  --selection: #ABAFBC;
+  --foreground: #0F0F0F;
+  --comment: #6272a4;
+  --cyan: #22798B;
+  --green: #50fa7b;
+  --orange: #eb8314;
+  --pink: #b32476;
+  --purple: #bd93f9;
+  --red: #ff5555;
+  --yellow: #f1fa8c;
+}
+
 body {
   background: var(--background-dark);
 }
