--- a/src/components/text/text.module.css
+++ b/src/components/text/text.module.css
@@ -107,6 +107,14 @@
   }
 }
 
+body:global(.light-mode) {
+  .text {
+    &.color-inverse {
+      color: white;
+    }
+  }
+}
+
 a.text {
   position: relative;
   color: var(--pink);
