--- a/src/components/skill-cards/skill-cards.module.css
+++ b/src/components/skill-cards/skill-cards.module.css
@@ -34,7 +34,7 @@
   }
 }
 
-.card {
+.card-item {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -66,7 +66,7 @@
   }
 }
 
-.card + .card {
+.card-item + .card-item {
   margin-left: var(--spacing-3);
 }
 
