--- a/src/components/experiences/experiences.module.css
+++ b/src/components/experiences/experiences.module.css
@@ -48,3 +48,34 @@
     margin-top: 1em;
   }
 }
+
+.link-list {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.link-item {
+  margin-top: var(--spacing-2);
+}
+
+.image-list {
+  display: flex;
+  flex-direction: column;
+}
+
+.image-item {
+  width: 100%;
+  height: auto;
+  max-height: 400px;
+  object-fit: contain;
+  object-position: left;
+}
+
+.image-item + .image-item {
+  margin-top: var(--spacing-3);
+}
+
+.link-list + .image-list {
+  margin-top: var(--spacing-3);
+}
